--- a/modules/service/cloud/aws/0.1/facets.yaml
+++ b/modules/service/cloud/aws/0.1/facets.yaml
@@ -1,42 +1,43 @@
 intent: service
-flavor: cloud
-version: '0.1'
-description: Unified AWS cloud service module supporting deployment, cronjob, job, and statefulset workloads
+flavor: k8s-pa
+version: '0.2'
+description: Unified AWS cloud service module supporting deployment, cronjob, job,
+  and statefulset workloads
 clouds:
 - aws
 artifact_inputs:
   primary:
-    attribute_path: "spec.release.image"
-    artifact_type: "docker_image"
+    attribute_path: spec.release.image
+    artifact_type: docker_image
 inputs:
   kubernetes_details:
     optional: false
-    type: "@outputs/kubernetes"
+    type: '@outputs/kubernetes'
     default:
       resource_type: kubernetes_cluster
       resource_name: default
     providers:
-      - kubernetes
-      - kubernetes-alpha
-      - helm
+    - kubernetes
+    - kubernetes-alpha
+    - helm
   kubernetes_node_pool_details:
-    type: "@outputs/kubernetes_node_pool"
+    type: '@outputs/aws_karpenter_nodepool'
     optional: true
   artifactories:
     optional: true
-    type: "@outputs/artifactories"
+    type: '@outputs/artifactories'
     default:
       resource_type: artifactories
       resource_name: default
   vpa_details:
     optional: true
-    type: "@outputs/vpa"
+    type: '@outputs/vpa'
     default:
       resource_type: configuration
       resource_name: vpa
 outputs:
   default:
-    type: "@outputs/service"
+    type: '@outputs/service'
 metadata:
   title: Metadata of service
   type: object
@@ -66,7 +67,9 @@ spec:
       x-ui-override-disable: true
       x-ui-visible-if:
         field: spec.type
-        values: ["application", "statefulset"]
+        values:
+        - application
+        - statefulset
       enum:
       - Always
       - OnFailure
@@ -77,9 +80,9 @@ spec:
       description: Distribute instances across different physical hosts within cluster
       x-ui-visible-if:
         field: spec.type
-        values: ["application", "statefulset"]
-    
-    # Cronjob specific fields
+        values:
+        - application
+        - statefulset
     cronjob:
       type: object
       title: Cronjob
@@ -88,13 +91,14 @@ spec:
       x-ui-toggle: true
       x-ui-visible-if:
         field: spec.type
-        values: ["cronjob"]
+        values:
+        - cronjob
       properties:
         schedule:
           title: Schedule
           type: string
           description: Cron scheduler to be specified in cron format
-          x-ui-placeholder: "Enter the cron schedule (e.g., * * * * *)"
+          x-ui-placeholder: Enter the cron schedule (e.g., * * * * *)
         suspend:
           title: Suspend
           type: boolean
@@ -102,7 +106,8 @@ spec:
         concurrency_policy:
           title: Concurrent Policy
           type: string
-          description: Specifies how to treat concurrent executions of a job created by this cron job
+          description: Specifies how to treat concurrent executions of a job created
+            by this cron job
           enum:
           - Allow
           - Forbid
@@ -111,30 +116,32 @@ spec:
       - schedule
       - suspend
       - concurrency_policy
-    
-    # Job fields (for both job and cronjob)
     job:
       type: object
       title: Job
-      description: Manage execution of a one-off task or batch process, ensuring it completes successfully
+      description: Manage execution of a one-off task or batch process, ensuring it
+        completes successfully
       x-ui-override-disable: true
       x-ui-toggle: true
       x-ui-visible-if:
         field: spec.type
-        values: ["job", "cronjob"]
+        values:
+        - job
+        - cronjob
       properties:
         retry:
           type: string
           default: 5
           minimum: 1
-          x-ui-placeholder: "Enter the minimum retry count for your job (default is 5)"
-          description: Number of time you want to retry the job before calling it a failure
-          pattern: '^(100|[1-9][0-9]?)$'
-          x-ui-error-message: "The retry count must be a positive integer between 1 and 100."
+          x-ui-placeholder: Enter the minimum retry count for your job (default is
+            5)
+          description: Number of time you want to retry the job before calling it
+            a failure
+          pattern: ^(100|[1-9][0-9]?)$
+          x-ui-error-message: The retry count must be a positive integer between 1
+            and 100.
       required:
       - retry
-    
-    # Statefulset specific fields
     persistent_volume_claims:
       type: object
       title: Persistent Volume Claim
@@ -143,9 +150,10 @@ spec:
       x-ui-toggle: true
       x-ui-visible-if:
         field: spec.type
-        values: ["statefulset"]
+        values:
+        - statefulset
       patternProperties:
-        "^[a-zA-Z0-9_-]*$":
+        ^[a-zA-Z0-9_-]*$:
           type: object
           title: PVC
           description: Define volume details
@@ -160,28 +168,30 @@ spec:
             storage_size:
               type: string
               title: Storage Size
-              description: The storage size of the pvc , it should be specified like `10Gi`
+              description: The storage size of the pvc , it should be specified like
+                `10Gi`
               minLength: 1
-              pattern: "^(0\\.[1-9]|[1-9](\\.[0-9]+)?|[1-5][0-9](\\.[0-9]+)?|6[0-4])Gi$|^([1-9](\\.[0-9]+)?|[1-9][0-9]{1,3}(\\.[0-9]+)?|[1-5][0-9]{4}(\\.[0-9]+)?|6[0-3][0-9]{3}(\\.[0-9]+)?|64000)Mi$"
-              x-ui-placeholder: "e.g., '800Mi' or '1.5Gi'"
-              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
+              pattern: ^(0\.[1-9]|[1-9](\.[0-9]+)?|[1-5][0-9](\.[0-9]+)?|6[0-4])Gi$|^([1-9](\.[0-9]+)?|[1-9][0-9]{1,3}(\.[0-9]+)?|[1-5][0-9]{4}(\.[0-9]+)?|6[0-3][0-9]{3}(\.[0-9]+)?|64000)Mi$
+              x-ui-placeholder: e.g., '800Mi' or '1.5Gi'
+              x-ui-error-message: Value doesn't match pattern, it should be number
+                ranging from 1Gi to 64Gi or 1Mi to 64000Mi
             path:
               type: string
               title: Path
               description: Path to mount the PVC
-              pattern: "^(/[^/]+)*(/)?$"
-              x-ui-error-message: "Value doesn't match pattern, eg: / or /<path> etc"
-              x-ui-placeholder: "Enter the storage size, eg. /data/temp"
+              pattern: ^(/[^/]+)*(/)?$
+              x-ui-error-message: 'Value doesn''t match pattern, eg: / or /<path>
+                etc'
+              x-ui-placeholder: Enter the storage size, eg. /data/temp
           required:
           - access_mode
           - path
           - storage_size
-
-    # AWS Cloud Permissions (AWS only)
     cloud_permissions:
       type: object
       title: Cloud Permissions
-      description: Assign AWS roles, define access levels, and enforce conditions for managing resource security and compliance
+      description: Assign AWS roles, define access levels, and enforce conditions
+        for managing resource security and compliance
       x-ui-toggle: true
       properties:
         aws:
@@ -192,28 +202,29 @@ spec:
             enable_irsa:
               type: boolean
               title: Enable IRSA
-              description: Enable this to grant fine-grained AWS permissions to Kubernetes workloads using service accounts.
+              description: Enable this to grant fine-grained AWS permissions to Kubernetes
+                workloads using service accounts.
             iam_policies:
               type: object
               title: IAM policies
-              description: Define IAM policies to manage permissions, control-access and secure resources
+              description: Define IAM policies to manage permissions, control-access
+                and secure resources
               patternProperties:
-                "^[a-zA-Z0-9_.-]*$":
+                ^[a-zA-Z0-9_.-]*$:
                   title: policy_name
                   properties:
                     arn:
                       title: ARN
                       type: string
-                      pattern: '^(arn:aws:iam::(\d{12}|aws):policy\/[A-Za-z0-9+=,.@\-_]+|\$\{[A-Za-z0-9._-]+\})$'
-                      x-ui-placeholder: "IAM policy example. Eg: arn:aws:iam::123456789012:policy/policy1"
-                      x-ui-error-message: "Value doesn't match pattern, accepted value pattern Eg: arn:aws:iam::123456789012:policy/policy1"
-                      x-ui-output-type: "iam_policy_arn"
+                      pattern: ^(arn:aws:iam::(\d{12}|aws):policy\/[A-Za-z0-9+=,.@\-_]+|\$\{[A-Za-z0-9._-]+\})$
+                      x-ui-placeholder: 'IAM policy example. Eg: arn:aws:iam::123456789012:policy/policy1'
+                      x-ui-error-message: 'Value doesn''t match pattern, accepted
+                        value pattern Eg: arn:aws:iam::123456789012:policy/policy1'
+                      x-ui-output-type: iam_policy_arn
                       x-ui-typeable: true
                   required:
                   - arn
                   type: object
-
-    # Runtime configuration - varies by type
     runtime:
       type: object
       title: Runtime
@@ -235,8 +246,6 @@ spec:
             type: string
           x-ui-command: true
           x-ui-override-disable: true
-        
-        # Size is required for all types
         size:
           type: object
           title: Size
@@ -248,22 +257,24 @@ spec:
               description: CPU size
               x-ui-compare:
                 field: spec.runtime.size.cpu_limit
-                comparator: '<='
-                x-ui-error-message: 'CPU cannot be more than CPU limit'
-              pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
-              x-ui-placeholder: "Enter CPU requests for your application"
-              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
+                comparator: <=
+                x-ui-error-message: CPU cannot be more than CPU limit
+              pattern: ^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$
+              x-ui-placeholder: Enter CPU requests for your application
+              x-ui-error-message: Value doesn't match pattern, it should be number
+                ranging from 1 to 32 or 1m to 32000m
             memory:
               type: string
               title: Memory
               description: Memory size
               x-ui-compare:
                 field: spec.runtime.size.memory_limit
-                comparator: '<='
-                x-ui-error-message: 'Memory cannot be more than memory limit'
-              pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
-              x-ui-placeholder: "Enter Memory requests for your application"
-              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
+                comparator: <=
+                x-ui-error-message: Memory cannot be more than memory limit
+              pattern: ^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$
+              x-ui-placeholder: Enter Memory requests for your application
+              x-ui-error-message: Value doesn't match pattern, it should be number
+                ranging from 1Gi to 64Gi or 1Mi to 64000Mi
             cpu_limit:
               type: string
               title: CPU Limit
@@ -271,10 +282,11 @@ spec:
               x-ui-compare:
                 field: spec.runtime.size.cpu
                 comparator: '>='
-                x-ui-error-message: 'CPU limit cannot be less than CPU'
-              pattern: "^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$"
-              x-ui-placeholder: "Enter CPU limits for your application"
-              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1 to 32 or 1m to 32000m"
+                x-ui-error-message: CPU limit cannot be less than CPU
+              pattern: ^([1-9]|[12][0-9]|3[0-2])$|^(3[0-1][0-9]{3}|[1-2][0-9]{4}|[1-9][0-9]{0,3}|32000)m$
+              x-ui-placeholder: Enter CPU limits for your application
+              x-ui-error-message: Value doesn't match pattern, it should be number
+                ranging from 1 to 32 or 1m to 32000m
             memory_limit:
               type: string
               title: Memory Limit
@@ -282,15 +294,14 @@ spec:
               x-ui-compare:
                 field: spec.runtime.size.memory
                 comparator: '>='
-                x-ui-error-message: 'Memory limit cannot be less than memory'
-              pattern: "^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$"
-              x-ui-placeholder: "Enter Memory limits for your application"
-              x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1Gi to 64Gi or 1Mi to 64000Mi"
+                x-ui-error-message: Memory limit cannot be less than memory
+              pattern: ^([1-9]|[1-5][0-9]|6[0-4])Gi$|^([1-9]|[1-9][0-9]{1,3}|[1-5][0-9]{4}|6[0-3][0-9]{3}|64000)Mi$
+              x-ui-placeholder: Enter Memory limits for your application
+              x-ui-error-message: Value doesn't match pattern, it should be number
+                ranging from 1Gi to 64Gi or 1Mi to 64000Mi
           required:
           - cpu
           - memory
-        
-        # Ports - only for application and statefulset
         ports:
           type: object
           title: Ports
@@ -298,29 +309,36 @@ spec:
           description: Port mappings
           x-ui-visible-if:
             field: spec.type
-            values: ["application", "statefulset"]
+            values:
+            - application
+            - statefulset
           patternProperties:
-            "^[0-9]+[m]?$":
+            ^[0-9]+[m]?$:
               type: object
               title: Port Name
-              description: Define port allocation to facilitate communication with service
+              description: Define port allocation to facilitate communication with
+                service
               properties:
                 port:
                   type: string
                   title: Port
                   description: Port on which application is running
-                  pattern: "^(?!0$)([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$"
+                  pattern: ^(?!0$)([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$
                   x-ui-unique: true
-                  x-ui-placeholder: "Enter the port number to expose for your application container"
-                  x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1-65535"
+                  x-ui-placeholder: Enter the port number to expose for your application
+                    container
+                  x-ui-error-message: Value doesn't match pattern, it should be number
+                    ranging from 1-65535
                 service_port:
                   type: string
                   title: Service Port
                   description: Port from which application service can be exposed
-                  pattern: "^(?!0$)([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$"
+                  pattern: ^(?!0$)([1-9][0-9]{0,3}|[1-5][0-9]{4}|6[0-4][0-9]{3}|65[0-4][0-9]{2}|655[0-2][0-9]|6553[0-5])$
                   x-ui-unique: true
-                  x-ui-placeholder: "Enter the port number to expose for your application service"
-                  x-ui-error-message: "Value doesn't match pattern, it should be number ranging from 1-65535"
+                  x-ui-placeholder: Enter the port number to expose for your application
+                    service
+                  x-ui-error-message: Value doesn't match pattern, it should be number
+                    ranging from 1-65535
                 protocol:
                   type: string
                   title: Protocol
@@ -331,17 +349,18 @@ spec:
               required:
               - protocol
               - port
-        
-        # Health checks - only for application and statefulset
         health_checks:
           type: object
           title: Health Checks
-          description: Ensure service remains responsive and operational. Assess its status and performance.
+          description: Ensure service remains responsive and operational. Assess its
+            status and performance.
           x-ui-override-disable: true
           x-ui-toggle: true
           x-ui-visible-if:
             field: spec.type
-            values: ["application", "statefulset"]
+            values:
+            - application
+            - statefulset
           properties:
             readiness_check_type:
               type: string
@@ -366,16 +385,17 @@ spec:
           required:
           - readiness_check_type
           - liveness_check_type
-        
-        # Autoscaling - only for application and statefulset
         autoscaling:
           type: object
           title: Autoscaling
-          description: Automatically adjust resources based on demand for optimal performance
+          description: Automatically adjust resources based on demand for optimal
+            performance
           x-ui-toggle: true
           x-ui-visible-if:
             field: spec.type
-            values: ["application", "statefulset"]
+            values:
+            - application
+            - statefulset
           properties:
             min:
               type: integer
@@ -402,29 +422,27 @@ spec:
               type: string
               title: CPU Threshold
               description: Max CPU threshold
-              pattern: "^(100|[1-9][0-9]?)$"
+              pattern: ^(100|[1-9][0-9]?)$
               x-ui-visible-if:
-                field: "spec.runtime.autoscaling.scaling_on"
-                values: ["CPU"]
+                field: spec.runtime.autoscaling.scaling_on
+                values:
+                - CPU
             ram_threshold:
               type: string
               title: RAM Threshold
               description: Max RAM threshold
-              pattern: "^(1?[0-9]?[0-9]|100)$"
+              pattern: ^(1?[0-9]?[0-9]|100)$
               x-ui-visible-if:
-                field: "spec.runtime.autoscaling.scaling_on"
-                values: ["RAM"]
-
+                field: spec.runtime.autoscaling.scaling_on
+                values:
+                - RAM
       required:
       - size
-
-    # Environment Variables (shared by all types)
     env:
       title: Environment Variables
       description: Map of environment variables passed to the main container.
       type: object
       x-ui-yaml-editor: true
-
   required:
   - type
   - runtime
@@ -438,17 +456,15 @@ spec:
   - cloud_permissions
   - runtime
   - env
-
 sample:
-  $schema: >-
-    https://facets-cloud.github.io/facets-schemas/schemas/service/service.schema.json
-  flavor: cloud
+  $schema: https://facets-cloud.github.io/facets-schemas/schemas/service/service.schema.json
+  flavor: k8s-pa
   metadata:
     labels:
       deliveryType: MANUAL
   kind: service
   disabled: true
-  version: '0.1'
+  version: '0.2'
   spec:
     type: application
     enable_host_anti_affinity: false
@@ -463,7 +479,7 @@ sample:
         scaling_on: CPU
         min: 1
         max: 1
-        cpu_threshold: "50"
+        cpu_threshold: '50'
       ports: {}
       size:
         cpu: 300m
@@ -474,4 +490,4 @@ sample:
         readiness_check_type: None
         liveness_check_type: None
     env:
-      LOG_LEVEL: INFO 
+      LOG_LEVEL: INFO
