add support to schedule in particular node pool

--- a/modules/ingress/nginx_k8s_native/0.2/facets.yaml
+++ b/modules/ingress/nginx_k8s_native/0.2/facets.yaml
@@ -18,6 +18,9 @@ inputs:
     - kubernetes
     - kubernetes-alpha
     - helm
+  kubernetes_node_pool_details:
+    type: '@outputs/aws_karpenter_nodepool'
+    optional: true
 spec:
   title: Nginx Ingress Controller
   type: object
