updated prometheus to use nodepool inputs

--- a/modules/prometheus/k8s/0.1/facets.yaml
+++ b/modules/prometheus/k8s/0.1/facets.yaml
@@ -9,6 +9,9 @@ inputs:
     - kubernetes
     - kubernetes-alpha
     - helm
+  kubernetes_node_pool_details:
+    optional: true
+    type: '@outputs/aws_karpenter_nodepool'
 outputs:
   default:
     type: '@outputs/prometheus'
