updated ingress to use artifactories module

--- a/modules/ingress/nginx_k8s_native/0.2/facets.yaml
+++ b/modules/ingress/nginx_k8s_native/0.2/facets.yaml
@@ -21,6 +21,12 @@ inputs:
   kubernetes_node_pool_details:
     type: '@outputs/aws_karpenter_nodepool'
     optional: true
+  artifactories:
+    type: '@outputs/artifactories'
+    optional: true
+    default:
+      resource_type: artifactories
+      resource_name: default
 spec:
   title: Nginx Ingress Controller
   type: object
