changed alert type

--- a/modules/alert_group/default/0.1/facets.yaml
+++ b/modules/alert_group/default/0.1/facets.yaml
@@ -54,6 +54,18 @@ spec:
               description: Type of Kubernetes resource being monitored
               minLength: 1
               maxLength: 100
+              x-ui-api-source:
+                endpoint: /cc-ui/v1/dropdown/stack/{{stackName}}/resources-info
+                method: GET
+                params:
+                  includeContent: false
+                labelKey: resourceType
+                valueKey: resourceType
+                filterConditions:
+                - field: resourceType
+                  value: UNKNOWN
+                  type: negation
+              x-ui-typeable: true
               x-ui-error-message: Please enter a valid Kubernetes resource type
             resource_name:
               type: string
@@ -236,4 +248,36 @@ sample:
   flavor: default
   version: '0.1'
   spec:
-    rules: {}
+    rules:
+      high_cpu_usage:
+        expr: cpu_usage_percent > 80
+        for: 5m
+        message: CPU usage is above 80% for more than 5 minutes
+        summary: High CPU usage detected
+        resource_type: pod
+        resource_name: my-application
+        alert_type: performance
+        severity: normal
+        thresholds:
+          warning: 70
+          critical: 90
+          unit: percent
+        notification_channels:
+          email: true
+          slack: false
+      memory_usage_critical:
+        expr: memory_usage_percent > 95
+        for: 2m
+        message: Memory usage is critically high
+        summary: Critical memory usage detected
+        resource_type: container
+        resource_name: my-app-container
+        alert_type: critical
+        severity: high
+        escalation_policy: immediate
+        thresholds:
+          critical: 95
+          unit: percent
+        notification_channels:
+          email: true
+          pagerduty: true
