updated to use new k8s outputs

--- a/modules/prometheus/k8s/0.1/facets.yaml
+++ b/modules/prometheus/k8s/0.1/facets.yaml
@@ -1,7 +1,7 @@
 inputs:
   kubernetes_details:
     optional: false
-    type: '@output/kubernetes'
+    type: '@outputs/kubernetes'
     default:
       resource_type: kubernetes_cluster
       resource_name: default
