user latest provider

--- a/modules/mongo/cosmosdb/1.0/facets.yaml
+++ b/modules/mongo/cosmosdb/1.0/facets.yaml
@@ -16,7 +16,7 @@ inputs:
       resource_type: network
       resource_name: default
     providers:
-    - azurerm
+    - azurerm3-116-0
 spec:
   title: Azure CosmosDB MongoDB
   description: Creates and manages Azure CosmosDB account with MongoDB API, including
