--- a/modules/artifactories/default/0.2/facets.yaml
+++ b/modules/artifactories/default/0.2/facets.yaml
@@ -10,7 +10,7 @@ clouds:
 inputs:
   kubernetes_details:
     optional: false
-    type: "@outputs/kubernetes"
+    type: '@outputs/kubernetes'
     displayName: Kubernetes Cluster
     default:
       resource_type: kubernetes_cluster
@@ -23,16 +23,17 @@ spec:
     include_all:
       type: boolean
       title: Include All
-      description: "Include all container registries mapped to this project."
+      description: Include all container registries mapped to this project.
     artifactories:
       title: Artifactories
       type: object
-      description: "A map of Container Registries."
+      description: A map of Container Registries.
       x-ui-visible-if:
         field: spec.include_all
-        values: [false]
+        values:
+        - false
       patternProperties:
-        "^[a-zA-Z0-9_.-]*$":
+        ^[a-zA-Z0-9_.-]*$:
           title: Artifactories Object Block
           description: The Name of the Container Registry for creating a secret.
           type: object
@@ -40,9 +41,9 @@ spec:
             name:
               title: Name
               type: string
-              description: "Container Registry Name"
+              description: Container Registry Name
               x-ui-api-source:
-                endpoint: "/cc-ui/v1/artifactories"
+                endpoint: /cc-ui/v1/artifactories
                 method: GET
                 params:
                   includeContent: false
