added providers in artifactories in 0.2

--- a/modules/artifactories/default/0.2/facets.yaml
+++ b/modules/artifactories/default/0.2/facets.yaml
@@ -15,6 +15,10 @@ inputs:
     default:
       resource_type: kubernetes_cluster
       resource_name: default
+    providers:
+    - kubernetes
+    - kubernetes-alpha
+    - helm
 spec:
   title: Artifactories
   type: object
