added vpa module

--- a/modules/cert_manager/default/0.1/facets.yaml
+++ b/modules/cert_manager/default/0.1/facets.yaml
@@ -12,8 +12,8 @@ inputs:
     type: '@outputs/prometheus'
     optional: true
     default:
-      resource_type: configuration
-      resource_name: prometheus
+      resource_type: prometheus
+      resource_name: default
   kubernetes_details:
     optional: false
     type: '@outputs/kubernetes'
