--- a/modules/service/cloud/aws/0.2/facets.yaml
+++ b/modules/service/cloud/aws/0.2/facets.yaml
@@ -33,8 +33,8 @@ inputs:
     optional: true
     type: '@outputs/vpa'
     default:
-      resource_type: configuration
-      resource_name: vpa
+      resource_type: vpa
+      resource_name: default
 outputs:
   default:
     type: '@outputs/service'
