updated cluster to support multiple instance types

--- a/modules/kubernetes_cluster/aws_eks/0.3/facets.yaml
+++ b/modules/kubernetes_cluster/aws_eks/0.3/facets.yaml
@@ -180,7 +180,8 @@ spec:
             use_instance_family:
               type: boolean
               title: Use Instance Family
-              description: Toggle to select by instance family (category) or by specific instance type.
+              description: Toggle to select by instance family (category) or by specific
+                instance type.
               default: false
               x-ui-visible-if:
                 field: spec.node_pools.dedicated.enabled
@@ -192,28 +193,36 @@ spec:
               description: EC2 instance family/category (e.g., c, m, r, g, etc.)
               default: c
               pattern: ^[a-z][0-9]*[a-z]*$
-              x-ui-error-message: Instance family must be a valid EC2 family (e.g., c, m, r, g, t, x, z)
+              x-ui-error-message: Instance family must be a valid EC2 family (e.g.,
+                c, m, r, g, t, x, z)
               x-ui-visible-if:
                 field: spec.node_pools.dedicated.use_instance_family
                 values:
                 - true
             instance_types:
-              type: string
+              type: array
               title: Instance Types
               description: EC2 instance types for the worker nodes.
-              default: t3.medium
+              default: 
+              - t3.medium
+              items:
+                type: string
               x-ui-visible-if:
                 field: spec.node_pools.dedicated.use_instance_family
                 values:
                 - false
             capacity_type:
-              type: string
+              type: array
               title: Capacity Type
-              description: Type of capacity associated with the EKS Node Group. Valid values are on-demand and spot.
-              default: spot
-              enum:
-              - on-demand
+              description: Type of capacity associated with the EKS Node Group. Valid
+                values are on-demand and spot.
+              default: 
               - spot
+              items:
+                type: string
+                enum:
+                - on-demand
+                - spot
               x-ui-visible-if:
                 field: spec.node_pools.dedicated.enabled
                 values:
@@ -257,7 +266,8 @@ spec:
             use_instance_family:
               type: boolean
               title: Use Instance Family
-              description: Toggle to select by instance family (category) or by specific instance type.
+              description: Toggle to select by instance family (category) or by specific
+                instance type.
               default: false
               x-ui-visible-if:
                 field: spec.node_pools.default.enabled
@@ -269,7 +279,8 @@ spec:
               description: EC2 instance family/category (e.g., c, m, r, g, etc.)
               default: c
               pattern: ^[a-z][0-9]*[a-z]*$
-              x-ui-error-message: Instance family must be a valid EC2 family (e.g., c, m, r, g, t, x, z)
+              x-ui-error-message: Instance family must be a valid EC2 family (e.g.,
+                c, m, r, g, t, x, z)
               x-ui-visible-if:
                 field: spec.node_pools.default.use_instance_family
                 values:
@@ -287,7 +298,8 @@ spec:
             capacity_type:
               type: array
               title: Capacity Type
-              description: Type of capacity associated with the EKS Node Group. Valid values are on-demand and spot.
+              description: Type of capacity associated with the EKS Node Group. Valid
+                values are on-demand and spot.
               default: spot
               x-ui-visible-if:
                 field: spec.node_pools.default.enabled
@@ -384,13 +396,17 @@ sample:
         max_size_cpu: 1000
         max_size_memory: 1000
         use_instance_family: false
-        instance_types: t3.medium
-        capacity_type: spot
+        instance_types: 
+        - t3.medium
+        capacity_type: 
+        - spot
       default:
         enabled: false
         max_size_cpu: 1000
         max_size_memory: 1000
         use_instance_family: false
-        instance_types: t3.medium
-        capacity_type: spot
+        instance_types: 
+        - t3.medium
+        capacity_type: 
+        - spot
     tags: {}
